<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:background="@color/layoutBackground"
    tools:context="cn.csu.software.wechat.MainActivity">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_24"
        android:layout_marginTop="@dimen/x_100"
        android:textSize="@dimen/x_36"
        android:textColor="@color/black"
        android:text="@string/account_login"/>

    <LinearLayout
        android:id="@+id/ll_login_account"
        android:layout_marginTop="@dimen/x_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_login_account_tips"
            android:layout_width="@dimen/x_80"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x_24"
            android:layout_marginTop="@dimen/x_18"
            android:textSize="@dimen/x_24"
            android:textColor="@color/black"
            android:text="@string/account"/>

        <EditText
            android:id="@+id/et_login_account"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x_30"
            android:layout_marginTop="@dimen/x_20"
            android:background="@color/layoutBackground"
            android:hint="@string/account_tips"
            android:maxLines="3"
            android:minHeight="@dimen/x_45"
            android:textCursorDrawable="@drawable/color_cursor"
            android:paddingStart="@dimen/x_16" />

        <RelativeLayout
            android:id="@+id/rl_login_account_delete"
            android:layout_width="@dimen/x_60"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/x_60"
            android:gravity="center_horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_login_account_delete"
                android:layout_width="@dimen/x_20"
                android:layout_height="@dimen/x_20"
                android:layout_marginTop="@dimen/x_32"
                android:src="@drawable/ic_delete" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/v_login_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x_1"
        android:layout_marginTop="@dimen/x_6"
        android:layout_marginStart="@dimen/x_18"
        android:layout_marginEnd="@dimen/x_18"
        android:background="@color/greenBackground"/>

    <LinearLayout
        android:id="@+id/ll_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_login_password_tips"
            android:layout_width="@dimen/x_80"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x_24"
            android:layout_marginTop="@dimen/x_18"
            android:textSize="@dimen/x_24"
            android:textColor="@color/black"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x_30"
            android:layout_marginTop="@dimen/x_20"
            android:background="@color/layoutBackground"
            android:hint="@string/password_tips"
            android:maxLines="3"
            android:minHeight="@dimen/x_45"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/color_cursor"
            android:paddingStart="@dimen/x_16" />

        <RelativeLayout
            android:id="@+id/rl_login_password_delete"
            android:layout_width="@dimen/x_60"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/x_60"
            android:gravity="center_horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_login_password_delete"
                android:layout_width="@dimen/x_20"
                android:layout_height="@dimen/x_20"
                android:layout_marginTop="@dimen/x_32"
                android:src="@drawable/ic_delete" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_send_verification_code"
            android:layout_width="@dimen/x_140"
            android:layout_height="@dimen/x_40"
            android:layout_marginEnd="@dimen/x_48"
            android:layout_marginTop="@dimen/x_12"
            android:padding="@dimen/x_1"
            android:background="@drawable/shape_verification_code_button"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_login_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/x_21"
                android:textColor="@color/black"
                android:text="@string/obtain_verification_code">
            </TextView>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/v_password_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x_1"
        android:layout_marginTop="@dimen/x_6"
        android:layout_marginStart="@dimen/x_18"
        android:layout_marginEnd="@dimen/x_18"
        android:background="@color/blackLine"/>

    <RelativeLayout
        android:id="@+id/rl_login_type"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/x_60"
        android:layout_marginTop="@dimen/x_16"
        android:layout_marginStart="@dimen/x_24"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_login_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/x_21"
            android:textColor="@color/blueFront"
            android:text="@string/email_login_type">
        </TextView>
    </RelativeLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x_60"
        android:layout_marginTop="@dimen/x_32"
        android:layout_marginStart="@dimen/x_18"
        android:layout_marginEnd="@dimen/x_18"
        android:textColor="@color/white"
        android:textSize="@dimen/x_24"
        android:background="@drawable/send_button_background"
        android:text="@string/login"/>

</LinearLayout>
