<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/layoutBackground">

    <RelativeLayout
        android:id="@+id/rl_header_mine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layoutColor">

        <ImageView
            android:layout_width="@dimen/x_32"
            android:layout_height="@dimen/x_32"
            android:layout_marginTop="@dimen/x_20"
            android:layout_marginEnd="@dimen/x_20"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_photograph" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv_avatar_mine"
            android:layout_width="@dimen/x_100"
            android:layout_height="@dimen/x_100"
            android:layout_marginStart="@dimen/x_30"
            android:layout_marginTop="@dimen/x_60"
            android:layout_marginBottom="@dimen/x_10"
            app:cardCornerRadius="@dimen/x_12">

            <ImageView
                android:id="@+id/iv_avatar_mine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/avatar_me"/>
        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x_60"
            android:layout_marginStart="@dimen/x_150">

            <TextView
                android:id="@+id/tv_name_mine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x_40"
                android:textSize="@dimen/x_30"
                android:textColor="#000000"
                android:text="@string/huangjishun"/>

            <TextView
                android:id="@+id/tv_account_mine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x_40"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/x_50"
                android:textSize="@dimen/x_18"
                android:textColor="#B0B0B0"
                android:text="@string/jab_number"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x_05"
            android:background="@color/blackLine"
            android:layout_marginTop="@dimen/x_200"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_pay_mine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_header_mine"
        android:layout_marginTop="@dimen/x_10"
        android:background="@drawable/selector_button_color_item">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x_05"
            android:background="@color/blackLine"/>

        <ImageView
            android:layout_width="@dimen/x_30"
            android:layout_height="@dimen/x_30"
            android:layout_marginTop="@dimen/x_15"
            android:layout_marginStart="@dimen/x_20"
            android:background="@drawable/ic_pay"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x_48"
            android:layout_marginStart="@dimen/x_80"
            android:layout_marginTop="@dimen/x_12"
            android:textSize="@dimen/font_normal"
            android:textColor="#000000"
            android:text="@string/pay"/>

        <ImageView
            android:layout_width="@dimen/x_30"
            android:layout_height="@dimen/x_30"
            android:layout_marginTop="@dimen/x_15"
            android:layout_marginEnd="@dimen/x_20"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_right_arrow"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x_05"
            android:background="@color/blackLine"
            android:layout_marginTop="@dimen/x_60"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_qr_code_mine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_pay_mine"
        android:layout_marginTop="@dimen/x_10"
        android:background="@drawable/selector_button_color_item">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x_05"
            android:background="@color/blackLine"/>

        <ImageView
            android:layout_width="@dimen/x_30"
            android:layout_height="@dimen/x_30"
            android:layout_marginTop="@dimen/x_15"
            android:layout_marginStart="@dimen/x_20"
            android:background="@drawable/ic_qr_code"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x_48"
            android:layout_marginStart="@dimen/x_80"
            android:layout_marginTop="@dimen/x_12"
            android:textSize="@dimen/font_normal"
            android:textColor="#000000"
            android:text="@string/qr_code"/>

        <ImageView
            android:layout_width="@dimen/x_30"
            android:layout_height="@dimen/x_30"
            android:layout_marginTop="@dimen/x_15"
            android:layout_marginEnd="@dimen/x_20"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_right_arrow"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x_05"
            android:background="@color/blackLine"
            android:layout_marginTop="@dimen/x_60"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_collection_mine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_qr_code_mine"
        android:background="@drawable/selector_button_color_item">

        <ImageView
            android:layout_width="@dimen/x_30"
            android:layout_height="@dimen/x_30"
            android:layout_marginTop="@dimen/x_15"
            android:layout_marginStart="@dimen/x_20"
            android:background="@drawable/ic_collection"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x_48"
            android:layout_marginStart="@dimen/x_80"
            android:layout_marginTop="@dimen/x_12"
            android:textSize="@dimen/font_normal"
            android:textColor="#000000"
            android:text="@string/collection"/>

        <ImageView
            android:layout_width="@dimen/x_30"
            android:layout_height="@dimen/x_30"
            android:layout_marginTop="@dimen/x_15"
            android:layout_marginEnd="@dimen/x_20"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_right_arrow"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x_05"
            android:background="@color/blackLine"
            android:layout_marginTop="@dimen/x_60"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_address_mine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_collection_mine"
        android:background="@drawable/selector_button_color_item">

        <ImageView
            android:layout_width="@dimen/x_30"
            android:layout_height="@dimen/x_30"
            android:layout_marginTop="@dimen/x_15"
            android:layout_marginStart="@dimen/x_20"
            android:background="@drawable/ic_address"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x_48"
            android:layout_marginStart="@dimen/x_80"
            android:layout_marginTop="@dimen/x_12"
            android:textSize="@dimen/font_normal"
            android:textColor="#000000"
            android:text="@string/address"/>

        <ImageView
            android:layout_width="@dimen/x_30"
            android:layout_height="@dimen/x_30"
            android:layout_marginTop="@dimen/x_15"
            android:layout_marginEnd="@dimen/x_20"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_right_arrow"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x_05"
            android:background="@color/blackLine"
            android:layout_marginTop="@dimen/x_60"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_mine_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_address_mine"
        android:layout_marginTop="@dimen/x_10"
        android:background="@drawable/selector_button_color_item">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x_05"
            android:background="@color/blackLine"/>

        <ImageView
            android:layout_width="@dimen/x_30"
            android:layout_height="@dimen/x_30"
            android:layout_marginTop="@dimen/x_15"
            android:layout_marginStart="@dimen/x_20"
            android:background="@drawable/ic_setting"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x_48"
            android:layout_marginStart="@dimen/x_80"
            android:layout_marginTop="@dimen/x_12"
            android:textSize="@dimen/font_normal"
            android:textColor="#000000"
            android:text="@string/setting"/>

        <ImageView
            android:layout_width="@dimen/x_30"
            android:layout_height="@dimen/x_30"
            android:layout_marginTop="@dimen/x_15"
            android:layout_marginEnd="@dimen/x_20"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_right_arrow"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x_05"
            android:background="@color/blackLine"
            android:layout_marginTop="@dimen/x_60"/>
    </RelativeLayout>


</RelativeLayout>
